# f-cpp-challenge

./: .gitignore  CMakeLists.txt  README.md
include/: Banner.h  Processor.h
src/: Banner.cpp  Processor.cpp  main.cpp
